# crust

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflow/: test.yml
.github/workflows/: test-clang.yml  test-gcc.yml  test-msvc.yml  test.yml
include/: cmp.hpp  cmp_decl.hpp  cmp_declare.hpp  crust.hpp  enum.hpp  enum_decl.hpp  enum_declare.hpp  fmt.hpp  function.hpp  iter.hpp  ops.hpp  option.hpp  option_decl.hpp  option_declare.hpp  range.hpp  result.hpp  slice.hpp  tuple.hpp  tuple_decl.hpp  tuple_declare.hpp  utility.hpp
include/crust/: clone.hpp  cmp.hpp  cmp_decl.hpp  enum.hpp  enum_decl.hpp  option.hpp  option_decl.hpp  repeat_macro.hpp  result.hpp  slice.hpp  tuple.hpp  tuple_decl.hpp  utility.hpp
include/crust/fmt/: mod.hpp
include/crust/helper/: repeat_macro.hpp  types.hpp
include/crust/iter/: mod.hpp
include/crust/num/: mod.hpp
include/crust/ops/: function.hpp  mod.hpp  range.hpp
include/fmt/: mod.hpp
include/iter/: mod.hpp
include/ops/: function.hpp  mod.hpp  range.hpp
test/: cmp.cpp  enum.cpp  function.cpp  iter.cpp  option.cpp  raii_checker.hpp  range.cpp  result.cpp  slice.cpp  test.cpp  tuple.cpp
